# docker-mlflow-server

./: README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build_push.yml
