[tool.poetry]
name = "docker-mlflow-server"
version = "0.1.0"
description = ""
authors = ["Rudolf Braun <48672663+BraunRudolf@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
mlflow = "^2.17.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
